@@ -43,10 +43,12 @@
   }
   \subsection{Bug Fixes}{
     \itemize{
+      \item Bugfix in \code{dCopula()} method of
+      \code{empCopula(, smoothing = "beta")}.
       \item Better error messages when copula parameters are \code{NA}
       (and hence, e.g. \code{pCopula()} gives an error).
       \item Bugfix in \code{rCopula(, copula = mixCopula())} if the
-	weights are unit vectors.
+      weights are unit vectors.
     }
   }
 }
